--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,8 +1,12 @@
 html {
-  html {
-    box-sizing: border-box;
+  box-sizing: border-box;
+  font-family: 'PT Sans', sans-serif;
   }
 
-  *, *::before, *::after {
-    box-sizing: inherit;
+*, *::before, *::after {
+  box-sizing: inherit;
   }
+
+body {
+  background-color: #c9b5ab;
+}
