--- a/CSS/main.css
+++ b/CSS/main.css
@@ -17,7 +17,7 @@ h1 {
   color: #3f1622;
 }
 
-nav ul li {
+a nav {
   font-family: 'PT Sans', sans-serif;
   font-size: 1.25rem;
   color: #8f2440;
