--- a/CSS/main.css
+++ b/CSS/main.css
@@ -17,11 +17,8 @@ h1 {
   color: #3f1622;
 }
 
-nav ul {
+a nav ul {
   font-family: 'PT Sans', sans-serif;
   font-size: 1.25rem;
-}
-
-ul li {
-  color: #8f2440;
+  color: #8f2440
 }
