--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,6 +1,6 @@
 html {
   box-sizing: border-box;
-  line-height: 1.5:\;
+  line-height: 1.5;
   }
 
 *, *::before, *::after {
@@ -19,12 +19,24 @@ h1 {
 
 nav ol {
   font-family: 'PT Sans', sans-serif;
-  font-size: 1.25rem;
+  font-size: 1.5rem;
+  list-style-type: none;
+}
+
+a:link {
   color: #8f2440;
+  text-decoration: none;
 }
 
 figcaption {
   font-family: 'PT Serif', serif;
   font-style: italic;
   text-align: center;
+  font-size: 1.25rem;
+}
+
+p {
+  font-family: 'PT Sans', sans-serif;
+  font-style: bold;
+  font-size: 1.5rem;
 }
