--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,6 +1,7 @@
 html {
   box-sizing: border-box;
   line-height: 1.5;
+  font-family: 'PT Sans', sans-serif;
   }
 
 *, *::before, *::after {
@@ -18,7 +19,6 @@ h1 {
 }
 
 nav ol {
-  font-family: 'PT Sans', sans-serif;
   font-size: 1.5rem;
   list-style-type: none;
 }
@@ -36,11 +36,14 @@ figcaption {
 }
 
 p {
-  font-family: 'PT Sans', sans-serif;
   font-style: bold;
   font-size: 1.5rem;
 }
 
 p:nth-of-type(1) {
   text-align: center;
+}
+
+blockquote {
+
 }
