--- a/CSS/main.css
+++ b/CSS/main.css
@@ -14,6 +14,7 @@ body {
 
 h1 {
   font-family: 'PT Sans', sans-serif;
+  font-weight: bold;
   font-size: 1.5rem;
   color: #3f1622;
 }
@@ -21,6 +22,7 @@ h1 {
 nav ol {
   font-size: 1.5rem;
   list-style-type: none;
+  font-weight: bold;
 }
 
 a:link {
@@ -32,18 +34,15 @@ figcaption {
   font-family: 'PT Serif', serif;
   font-style: italic;
   text-align: center;
-  font-size: 1.25rem;
-}
-
-p {
-  font-style: bold;
-  font-size: 1.5rem;
 }
 
 p:nth-of-type(1) {
   text-align: center;
+  font-weight: bold;
 }
 
-blockquote {
-
+blockquote:not(cite) {
+  font-style: italic;
+  font-size: 1.5rem;
+  text-align: center;
 }
