--- a/CSS/main.css
+++ b/CSS/main.css
@@ -41,7 +41,7 @@ p:nth-of-type(1) {
   font-weight: bold;
 }
 
-blockquote:not(cite) {
+blockquote:not(.footer) {
   font-style: italic;
   font-size: 1.5rem;
   text-align: center;
