--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,7 +1,7 @@
 html {
   box-sizing: border-box;
   line-height: 1.5;
-  font-family: 'PT Sans', sans-serif;
+  font-family: 'PT Serif', serif;
   }
 
 *, *::before, *::after {
@@ -20,6 +20,7 @@ h1 {
 }
 
 nav ol {
+  font-family: 'PT Sans', sans-serif;
   font-size: 1.5rem;
   list-style-type: none;
   font-weight: bold;
@@ -31,7 +32,6 @@ a:link {
 }
 
 figcaption {
-  font-family: 'PT Serif', serif;
   font-style: italic;
   text-align: center;
 }
@@ -41,8 +41,36 @@ p:nth-of-type(1) {
   font-weight: bold;
 }
 
-blockquote:not(.footer) {
+blockquote:not(cite) {
   font-style: italic;
   font-size: 1.5rem;
   text-align: center;
+}
+
+h2 {
+  font-family: 'PT Sans', sans-serif;
+  font-weight: bold;
+  font-size: 1.25rem;
+  color: #3f1622;
+}
+
+main ol li {
+  list-style-type: lower-greek;
+}
+
+p:last-of-type {
+  font-style: italic;
+}
+
+dl dt {
+  font-weight: bold;
+  color: #222;
+}
+
+ul li {
+  list-style-type: circle;
+}
+
+a footer {
+  color: #8f2440;
 }
